--- a/BotenODK-Datadash/src/app/secure/aheader/aheader.component.html
+++ b/BotenODK-Datadash/src/app/secure/aheader/aheader.component.html
@@ -3,9 +3,12 @@
       <span>Datadash - BotenODK</span>
       <span class="example-spacer"></span>
       <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-        <mat-icon>logout</mat-icon>
+        <mat-icon>insert_chart</mat-icon>
       </button>
-      <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+      <button routerLink="/usermanagement" mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+        <mat-icon>groups</mat-icon>
+      </button>
+      <button routerLink="/logout" mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
         <mat-icon>logout</mat-icon>
       </button>
     </mat-toolbar>
