--- a/BotenODK-Datadash/src/app/secure/dashboard/dashboard.component.html
+++ b/BotenODK-Datadash/src/app/secure/dashboard/dashboard.component.html
@@ -1,3 +1,7 @@
 <app-aheader></app-aheader>
 
-<p>dashboard works!</p>
+<div class="container">
+    <h1>Dashboard - Welkom</h1>
+</div>
+
+<app-afooter></app-afooter>
