added modules + usermanagement

--- a/BotenODK-Datadash/src/app/secure/aheader/aheader.component.html
+++ b/BotenODK-Datadash/src/app/secure/aheader/aheader.component.html
@@ -5,6 +5,9 @@
       <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
         <mat-icon>insert_chart</mat-icon>
       </button>
+      <button routerLink="/datamodels" mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+        <mat-icon>model_training</mat-icon>
+      </button>
       <button routerLink="/usermanagement" mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
         <mat-icon>groups</mat-icon>
       </button>
