--- a/BotenODK-Datadash/src/app/secure/usermanagement/add-user/add-user.component.html
+++ b/BotenODK-Datadash/src/app/secure/usermanagement/add-user/add-user.component.html
@@ -27,8 +27,8 @@
         <mat-form-field class="full-width" appearance="fill">
             <mat-label>Rol</mat-label>
             <mat-select name="role" formControlName="role">
-                <mat-option value="0">Gebruiker</mat-option>
-                <mat-option value="1">Beheerder</mat-option>
+                <mat-option value="User">Gebruiker</mat-option>
+                <mat-option value="Administrator">Beheerder</mat-option>
             </mat-select>
         </mat-form-field>
 
