--- a/BotenODK-Datadash/src/app/secure/usermanagement/usermanagement.component.html
+++ b/BotenODK-Datadash/src/app/secure/usermanagement/usermanagement.component.html
@@ -26,6 +26,21 @@
             <td mat-cell *matCellDef="let element">{{element.username}}</td>
         </ng-container>
 
+        <ng-container matColumnDef="options">
+            <th mat-header-cell *matHeaderCellDef></th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-icon-button [matMenuTriggerFor]="menu">
+                    <mat-icon>more_vert</mat-icon>
+                  </button>
+                  <mat-menu #menu="matMenu">
+                    <button mat-menu-item (click)="deleteUser(element.id)">
+                      <mat-icon>delete</mat-icon>
+                      <span>Verwijderen</span>
+                    </button>
+                  </mat-menu>
+            </td>
+        </ng-container>
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
