--- a/BotenODK-Datadash/src/app/secure/aheader/aheader.component.html
+++ b/BotenODK-Datadash/src/app/secure/aheader/aheader.component.html
@@ -2,7 +2,7 @@
     <mat-toolbar color="primary">
       <span>Datadash - BotenODK</span>
       <span class="example-spacer"></span>
-      <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+      <button routerLink="/dashboard" mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
         <mat-icon>insert_chart</mat-icon>
       </button>
       <button routerLink="/datamodels" mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
