--- a/BotenODK-Datadash/src/app/secure/dashboard/dashboard.component.html
+++ b/BotenODK-Datadash/src/app/secure/dashboard/dashboard.component.html
@@ -5,27 +5,32 @@
 
     <div>
         <h2>Aantallen <mat-icon fontIcon="info" matTooltip="Deze grafiek toont het aantal ontdekte objecten per dag."></mat-icon></h2>
+
+        <mat-button-toggle-group name="dashboardView" aria-label="Weergave voor het dashboard">
+          <mat-button-toggle value="week" (change)="changeView($event.value)">Week</mat-button-toggle>
+          <mat-button-toggle value="year" (change)="changeView($event.value)">Jaar</mat-button-toggle>
+        </mat-button-toggle-group>
         
-        <mat-tab-group>
-          <mat-tab label="Week">
-            <p><button mat-button (click)="decrementAmountWeeks()"><mat-icon fontIcon="arrow_back_ios"></mat-icon></button>
-            {{ firstDayWeek }} - {{ lastDayWeek }}
-            <button mat-button (click)="incrementAmountWeeks()"><mat-icon fontIcon="arrow_forward_ios"></mat-icon></button></p>
-            
-            <div>
-              <div style="display: block">
-                <canvas baseChart
-                  [data]="barChartData"
-                  [options]="barChartOptions"
-                  [plugins]="barChartPlugins"
-                  [type]="barChartType">
-                </canvas>
-              </div>
+        <div [ngSwitch]="selectedView">
+          <p *ngSwitchCase="'week'"><button mat-button (click)="decrementAmountWeeks()"><mat-icon fontIcon="arrow_back_ios"></mat-icon></button>
+          {{ firstDayWeek }} - {{ lastDayWeek }}
+          <button mat-button (click)="incrementAmountWeeks()"><mat-icon fontIcon="arrow_forward_ios"></mat-icon></button></p>
+
+          <p *ngSwitchCase="'year'"><button mat-button (click)="decrementYear()"><mat-icon fontIcon="arrow_back_ios"></mat-icon></button>
+            {{ firstYearDay }} - {{ lastYearDay }}
+            <button mat-button (click)="incrementYear()"><mat-icon fontIcon="arrow_forward_ios"></mat-icon></button></p>
+        </div>
+          
+          <div>
+            <div style="display: block">
+              <canvas baseChart
+                [data]="barChartData"
+                [options]="barChartOptions"
+                [plugins]="barChartPlugins"
+                [type]="barChartType">
+              </canvas>
             </div>
-          </mat-tab>
-          <mat-tab label="Maand"> Content 2 </mat-tab>
-          <mat-tab label="Jaar"> Content 3 </mat-tab>
-        </mat-tab-group>
+          </div>
       </div>
 </div>
 
