--- a/BotenODK-Datadash/src/app/secure/datamodels/new-model/new-model.component.html
+++ b/BotenODK-Datadash/src/app/secure/datamodels/new-model/new-model.component.html
@@ -24,6 +24,6 @@
 
         <p><mat-slide-toggle name="enabled" formControlName="enabled">Actief</mat-slide-toggle></p>
 
-        <p><button mat-raised-button color="primary">Model aanmaken</button></p>
+        <p><button mat-raised-button>Model aanmaken</button></p>
     </form>
 </div>
