--- a/BotenODK-Datadash/src/app/charts/basechart/basechart.component.html
+++ b/BotenODK-Datadash/src/app/charts/basechart/basechart.component.html
@@ -1,3 +1,3 @@
 <div class="chart">
-    <ng-container #chart></ng-container>
+    <app-barchart *ngIf="chartData.chartType == 'bar'" [chartData]="chartData"></app-barchart>
 </div>
