--- a/BotenODK-Datadash/src/app/charts/barchart/barchart.component.html
+++ b/BotenODK-Datadash/src/app/charts/barchart/barchart.component.html
@@ -1,21 +1,27 @@
-<svg width="100%" [attr.height]="chartData.options.height" id="barChart">
+<svg width="100%" [attr.height]="chartHeight" id="barChart">
     <!-- teken de stappen op de y-as met een loop -->
+    <line x1="50" x2="50" y1="0" [attr.y2]="chartHeight - 50" class="chart-lines"></line> <!-- lijn voor de y-as -->
+    <!-- Stappen (getallen voor de y-as) -->
     <g *ngFor="let step of yAxis">
-        <text [attr.x]="20" [attr.y]="(chartHeight + 25) - ((chartHeight / yMaxValue) * step)">{{ step }}</text>
-        <line [attr.x1]="40" [attr.x2]="chartWidth - 20" [attr.y1]="(chartHeight + 25) - ((chartHeight / yMaxValue) * step)" [attr.y2]="(chartHeight + 25) - ((chartHeight / yMaxValue) * step)" class="chart-lines"></line>
+        <text x="15" [attr.y]="calculateYPixels(step)" dy="10">{{ step }}</text>
+        <line x1="40" [attr.x2]="chartWidth - 20" [attr.y1]="calculateYPixels(step)" [attr.y2]="calculateYPixels(step)" class="chart-lines"></line>
     </g>
-    <line x1="50" x2="50" y1="25" [attr.y2]="chartHeight" stroke="gray"></line> <!--verticale y-as-->
 
-    <!-- Teken de stappen (labels) uit op de x-as met een loop -->
+    <!-- Teken de stappen (labels) op de x-as -->
     <g *ngFor="let label of chartData.labels; index as i">
-        <text [attr.x]="i * (chartWidth / xAxisSteps) + 50" y="575">{{ label }}</text>
-        <line [attr.x1]="i * (chartWidth / xAxisSteps) + 50" [attr.x2]="i * (chartWidth / xAxisSteps) + 50" y1="35" y2="550" class="chart-lines"></line>
+        <line [attr.x1]="calculateXPixels(i)" [attr.x2]="calculateXPixels(i)" y1="0" [attr.y2]="chartHeight - 25" class="chart-lines"></line>
+        <text [attr.x]="calculateXPixels(i)" [attr.y]="chartHeight - 10">{{ label }}</text>
     </g>
 
-    <!-- Teken de daadwerkelijke data getallen per dataset in de grafiek als staaf -->
-    <g *ngFor="let dataset of chartData.datasets">
-        <g *ngFor="let data of dataset.data;">
-            <rect x="50" [attr.y]="(chartHeight + 25) - ((chartHeight / yMaxValue) * data)" width="100" height="25" class="bars"></rect>
+    <!-- Teken de staven voor de grafiek -->
+    <g *ngFor="let dataset of chartData.datasets; index as i">
+        <g *ngFor="let data of dataset.data; index as x">
+            <!-- Teken het aantal (tekst) boven de staaf -->
+            <text [attr.x]="(calculateXPixels(x) + (i * barWidth) + 20)" [attr.y]="calculateYPixels(data) - 10">{{ data }}</text>
+
+            <!-- Teken de staven per dataset -->
+            <rect [attr.x]="calculateXPixels(x) + (i * barWidth)" [attr.y]="calculateYPixels(data)" [attr.width]="barWidth" 
+            [attr.height]="calculateBarHeight(data)" [attr.fill]="colors[i]"></rect>
         </g>
     </g>
 </svg>  
