--- a/BotenODK-Datadash/src/app/charts/barchart/barchart.component.css
+++ b/BotenODK-Datadash/src/app/charts/barchart/barchart.component.css
@@ -1,7 +1,3 @@
-svg {
-    border: 1px dashed black;
-}
-
 .chart-lines {
     stroke: gray;
     stroke-width: 0.2px;
@@ -9,5 +5,5 @@ svg {
 
 .bars {
     stroke-width: 1px;
-    stroke: black;
+    opacity: 0.7;
 }
