--- a/BotenODK-Datadash/src/app/charts/linechart/linechart.component.html
+++ b/BotenODK-Datadash/src/app/charts/linechart/linechart.component.html
@@ -16,10 +16,17 @@
     <g *ngFor="let dataset of chartData.datasets; index as i">
         <g *ngFor="let data of dataset.data; index as x">
             <!-- Teken de datapunten met cirkels -->
-            <circle [attr.cx]="calculateXPixels(x)" [attr.cy]="calculateYPixels(data)" r="3"></circle>
+            <circle [attr.cx]="calculateXPixels(x)" [attr.cy]="calculateYPixels(data)" r="4" (mouseenter)="showDialog($event, dataset, x)" 
+            (mouseleave)="hideDialog()" [style.fill]="colors[i]"></circle>
+
             <!-- Teken de lijnen tussen de cirkels -->
             <line [attr.x1]="calculateXPixels(x)" [attr.x2]="calculateXPixels(x + 1)" [attr.y1]="calculateYPixels(data)" 
-            [attr.y2]="calculateYPixels(dataset.data[x + 1])" class="line"></line>
+            [attr.y2]="calculateYPixels(dataset.data[x + 1])" class="line" [style.stroke]="colors[i]"></line>
         </g>
     </g>
 </svg>
+
+<div *ngIf="showDialogFlag" class="dialog" [style.left]="(dialogX + 10) + 'px'" [style.top]="dialogY + 'px'">
+    <p><b>{{ currentDialogDataset.label }}</b><br/>
+    {{ currentDialogDataset.data[iteration] }}</p>
+</div>
