--- a/BotenODK-Datadash/src/app/charts/barchart/barchart.component.css
+++ b/BotenODK-Datadash/src/app/charts/barchart/barchart.component.css
@@ -7,3 +7,11 @@
     stroke-width: 1px;
     opacity: 0.7;
 }
+
+.dialog {
+    position: absolute;
+    border-radius: 10px;
+    background-color: rgba(0, 0, 0, 0.658);
+    color: white;
+    padding: 10px;
+}
