--- a/BotenODK-Datadash/src/app/secure/dashboard/dashboard.component.html
+++ b/BotenODK-Datadash/src/app/secure/dashboard/dashboard.component.html
@@ -5,8 +5,12 @@
 
     <div>
         <h2>Aantallen <mat-icon fontIcon="info" matTooltip="Deze grafiek toont het aantal ontdekte objecten per dag."></mat-icon></h2>
-
         
+        <p><button mat-button (click)="decrementAmountWeeks()"><</button>
+        <button mat-button (click)="resetAmountWeeks()">Vandaag</button>
+        <button mat-button (click)="incrementAmountWeeks()">></button></p>
+
+        <chart [chartData]="chartData"></chart>
     </div>
 </div>
 
